# RayTracerChallenge-CPP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  Canvas.hpp  Intersection.hpp  Light.hpp  Matrix.hpp  Pattern.hpp  RT.hpp  Ray.hpp  Shape.hpp  Tuple.hpp  Util.hpp  World.hpp
lib/: Camera.cpp  Canvas.cpp  Intersection.cpp  Light.cpp  Pattern.cpp  Ray.cpp  Shape.cpp  Tuple.cpp  World.cpp
src/: RT.cpp
tests/: CameraTest.cpp  CanvasTest.cpp  LightTest.cpp  MatrixTest.cpp  PatternTest.cpp  RayTest.cpp  ShapeTest.cpp  TupleTest.cpp  WorldTest.cpp
